auth returning gender, membership (#22)
* auth returning gender, membership

* fix error

* fix error

* fix error

* fix error

* fix error

* fix error
