# docs/swagger.json
@@ -7,7 +7,6 @@
     "paths": {
         "/auth": {
             "post": {
-                "description": "Authenticates a user using Firebase token and returns a JWT token for the authenticated user",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,12 +16,11 @@
                 "tags": [
                     "authentication"
                 ],
-                "summary": "Authenticate a user and return a JWT token",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Firebase token for user verification",
-                        "name": "firebase_token",
+                      "name": "Authorization",
                         "in": "header",
                         "required": true
                     }
@@ -2618,7 +2616,7 @@
                 "summary": "Get a list of practices",
                 "responses": {
                     "200": {
-                        "description": "GetMemberships of practices retrieved successfully",
+                      "description": "Practices retrieved successfully",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -2667,7 +2665,8 @@
                     "201": {
                         "description": "Practice created successfully",
                         "schema": {
-                            "$ref": "#/definitions/practice.Response"
+                          "type": "object",
+                          "additionalProperties": true
                         }
                     },
                     "400": {
@@ -3318,7 +3317,7 @@
                 "capacity": {
                     "type": "integer"
                 },
-                "createdAt": {
+              "created_at": {
                     "type": "string"
                 },
                 "description": {
@@ -3330,7 +3329,7 @@
                 "name": {
                     "type": "string"
                 },
-                "updatedAt": {
+              "updated_at": {
                     "type": "string"
                 }
             }
@@ -3870,6 +3869,23 @@
                 }
             }
         },
+      "identity.MembershipReadResponseDto": {
+        "type": "object",
+        "properties": {
+          "membership_name": {
+            "type": "string"
+          },
+          "plan_name": {
+            "type": "string"
+          },
+          "renewal_date": {
+            "type": "string"
+          },
+          "start_date": {
+            "type": "string"
+          }
+        }
+      },
         "identity.UserAuthenticationResponseDto": {
             "type": "object",
             "properties": {
@@ -3885,9 +3901,15 @@
                 "first_name": {
                     "type": "string"
                 },
+              "id": {
+                "type": "string"
+                },
                 "last_name": {
                     "type": "string"
                 },
+              "membership_info": {
+                "$ref": "#/definitions/identity.MembershipReadResponseDto"
+              },
                 "phone": {
                     "type": "string"
                 },
@@ -4057,7 +4079,7 @@
                 "capacity": {
                     "type": "integer"
                 },
-                "createdAt": {
+              "created_at": {
                     "type": "string"
                 },
                 "description": {
@@ -4072,7 +4094,7 @@
                 "name": {
                     "type": "string"
                 },
-                "updatedAt": {
+              "updated_at": {
                     "type": "string"
                 }
             }
