# internal/domains/identity/values/user_info.go
@@ -1,6 +1,9 @@
 package identity
 
-import "github.com/google/uuid"
+import (
+	"github.com/google/uuid"
+	"time"
+)
 
 type UserRegistrationRequestNecessaryInfo struct {
 	Age         int32
@@ -9,15 +12,25 @@ type UserRegistrationRequestNecessaryInfo struct {
 	CountryCode string
 }
 
+type MembershipReadInfo struct {
+	MembershipName string
+	PlanName       string
+	StartDate      time.Time
+	RenewalDate    *time.Time
+}
+
 type UserReadInfo struct {
-	ID          uuid.UUID
-	Age         int32
-	CountryCode string
-	FirstName   string
-	LastName    string
-	Email       *string
-	Role        string
-	Phone       *string
+	ID             uuid.UUID
+	Gender         *string
+	Age            int32
+	CountryCode    string
+	FirstName      string
+	LastName       string
+	Email          *string
+	Role           string
+	IsActiveStaff  *bool
+	Phone          *string
+	MembershipInfo *MembershipReadInfo
 }
 
 type StaffReadInfo struct {
